Made changes to to compensate and app.js

--- a/ui/src/components/compensate/Compensate.css
+++ b/ui/src/components/compensate/Compensate.css
@@ -1,11 +1,4 @@
-.container{
-    margin-top: 20px;
-    padding-left: 50px;
-    padding-right: 50px;
-}
-.cell{
-    padding: 5px;
-}
-.body > div:nth-child(even){
-    background-color: lightcyan;
+.buyForm {
+    display: inline-block;
+    min-width: 350px;
 }
