--- a/ui/src/components/header/header.css
+++ b/ui/src/components/header/header.css
@@ -1,6 +1,7 @@
 .header{
-    padding-right: 20px;
+    padding-right: 10px;
     padding-top: 10px;
+    padding-left: 10px;
 }
 .button{
     padding: 7px 50px;
@@ -19,4 +20,12 @@
     position: inherit;
     top: 0;
     right: 0;
+}
+.link{
+    position: inherit;
+    top: 0;
+    right: 0;
+}
+.link:hover {
+    background-color: lightgreen;
 }
