made changes to ui

--- a/ui/src/components/compensate/Compensate.css
+++ b/ui/src/components/compensate/Compensate.css
@@ -2,3 +2,17 @@
     display: inline-block;
     min-width: 350px;
 }
+.account{
+    font-weight: 600;
+    font-size: 18px;
+}
+.balance{
+    background-color: lightgreen;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+.footprint{
+    background-color: lightcoral;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
