--- a/ui/src/components/header/header.css
+++ b/ui/src/components/header/header.css
@@ -2,6 +2,7 @@
     padding-right: 10px;
     padding-top: 10px;
     padding-left: 10px;
+    padding-bottom: 10px;
 }
 .button{
     padding: 7px 50px;
@@ -24,7 +25,7 @@
 .link{
     position: inherit;
     top: 0;
-    right: 0;
+    left: 0;
 }
 .link:hover {
     background-color: lightgreen;
