--- a/ui/src/components/compensate/Compensate.css
+++ b/ui/src/components/compensate/Compensate.css
@@ -16,3 +16,10 @@
     padding: 5px 10px;
     border-radius: 5px;
 }
+.not-logged{
+    background-color: lightblue;
+    padding: 5px 10px;
+    font-size: 25px;
+    font-weight: bold;
+    border-radius: 10px;
+}
