--- a/ui/src/components/header/header.css
+++ b/ui/src/components/header/header.css
@@ -1,3 +1,7 @@
+nav .btn {
+    color: #fff;
+}
+
 .header{
     padding-right: 10px;
     padding-top: 10px;
@@ -28,5 +32,5 @@
     left: 0;
 }
 .link:hover {
-    background-color: lightgreen;
+    background-color: #f1b24a;
 }
