Restyled the buy GET form

--- a/ui/src/components/buyGet/buyGet.css
+++ b/ui/src/components/buyGet/buyGet.css
@@ -2,3 +2,9 @@
     display: inline-block;
     min-width: 350px;
 }
+
+#buyGetFormSection {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
