Updates compensate, header and added footer

--- a/ui/src/components/header/header.css
+++ b/ui/src/components/header/header.css
@@ -34,3 +34,8 @@ nav .btn {
 .link:hover {
     background-color: #f1b24a;
 }
+.balances{
+    padding: 5px 7px;
+    border-radius: 5px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15)
+}
