--- a/ui/src/components/footer/Footer.css
+++ b/ui/src/components/footer/Footer.css
@@ -2,16 +2,17 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    background-color: wheat;
+    color: white;
+    font-weight: 600;
     width: 100%;
     padding: 5px 15px;
     font-size: 16px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .url{
-    color: navy;
+    margin-bottom: 5px;
 }
 .url:hover{
-    color: blue;
+    color: #e9cda0;
     cursor: pointer;
 }
