--- a/ui/src/components/header/header.css
+++ b/ui/src/components/header/header.css
@@ -12,6 +12,7 @@ nav .btn {
     padding: 7px 50px;
     border-radius: 10px;
     border: 0px;
+    background-color: #f1b24a;
 }
 .not-connected{
     background-color: coral;
