--- a/ui/src/components/footer/Footer.css
+++ b/ui/src/components/footer/Footer.css
@@ -1,18 +1,23 @@
-.footer{
+footer {
     position: absolute;
     bottom: 0;
     left: 0;
     color: white;
-    font-weight: 600;
     width: 100%;
     padding: 5px 15px;
-    font-size: 16px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 11px;
 }
-.url{
-    margin-bottom: 5px;
+
+footer a {
+    text-decoration: none;
+    color: #fff;
 }
-.url:hover{
-    color: #e9cda0;
-    cursor: pointer;
+
+footer a:nth-child(1) {
+    border-right: 1px solid #fff;
+    padding-right: 12px;
+}
+
+footer a:hover {
+    color: #eda42b;
 }
