--- a/ui/src/components/header/header.css
+++ b/ui/src/components/header/header.css
@@ -40,3 +40,7 @@ nav .btn {
     border-radius: 5px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15)
 }
+nav .link-active {
+    background-color: #f1b24a;
+    color: #fff;
+}
